# -adaptive-rag-research-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/corpus/: anthropic.md  google_deepmind.md  meta_ai.md  mistral_ai.md  openai.md
data/golden_eval/: dataset.jsonl
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AskCard.css  AskCard.test.tsx  AskCard.tsx  CorpusManager.css  CorpusManager.test.tsx  CorpusManager.tsx  ErrorBanner.css  ErrorBanner.tsx  ErrorBoundary.css  ErrorBoundary.tsx  GraphVisualization.css  GraphVisualization.test.tsx  GraphVisualization.tsx  Header.css  Header.tsx  ProgressIndicator.css  ProgressIndicator.tsx  ResearchSummaryPanel.css  ResearchSummaryPanel.tsx  ResultCard.css  ResultCard.tsx
frontend/src/constants/: exampleQuestions.ts
frontend/src/hooks/: useHealthStatus.test.ts  useHealthStatus.ts  useResearchStream.test.ts  useResearchStream.ts
src/rag_assistant/: api.py  cache.py  cli.py  config.py  llm.py  logging_conf.py  readiness.py  tracing.py
src/rag_assistant/eval/: golden_dataset.py  run_eval.py
src/rag_assistant/fusion/: rrf.py
src/rag_assistant/grading/: relevance_grader.py
src/rag_assistant/graph/: build_graph.py  research_summary.py  state.py
src/rag_assistant/graph/nodes/: corrective_fallback.py  decompose.py  fuse.py  grade.py  report.py  retrieve.py  router.py  synthesize.py  web_search_node.py
src/rag_assistant/ingestion/: build_index.py  loaders.py  manifest.py  splitter.py  tasks.py
src/rag_assistant/prompts/: decompose_prompt.py  grading_prompt.py  router_prompt.py  synthesis_prompt.py
src/rag_assistant/retrieval/: bm25_store.py  vector_store.py  web_search.py
src/rag_assistant/schemas/: api.py  models.py
tests/: conftest.py  test_api.py  test_bm25_store.py  test_cache.py  test_config.py  test_incremental_indexing.py  test_ingest_tasks.py  test_ingestion.py  test_llm.py  test_readiness.py  test_relevance_grader.py  test_rrf.py  test_vector_store.py  test_web_search.py
tests/graph/: test_build_graph_timing.py  test_corrective_fallback_node.py  test_decompose_node.py  test_fuse_node.py  test_grade_node.py  test_graph_basic_path.py  test_report_node.py  test_research_summary.py  test_retrieve_bm25_node.py  test_router_node.py  test_synthesize_node.py
